Asserted thrown exceptions and optimized validator