@@ -1,10 +1,9 @@
 package com.app.validator;
 
 import java.math.BigDecimal;
-import java.time.LocalDate;
-import java.time.format.DateTimeFormatter;
-import java.util.Set;
+import java.util.Collections;
 
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -16,7 +15,6 @@ import com.app.model.dto.EngineDto;
 import com.app.model.dto.VehicleDto;
 
 import static com.app.data.MockDataForTests.*;
-import static java.time.format.DateTimeFormatter.*;
 import static java.time.temporal.ChronoUnit.*;
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -28,11 +26,16 @@ class VehicleValidatorTest {
 
   private VehicleDto vehicleDto = createVehicleDto();
   private EngineDto engineDto = createEngineDto();
+  private Errors errors;
+
+  @BeforeEach
+  void setUp() {
+    errors = new BeanPropertyBindingResult(vehicleDto, "validUser");
+  }
 
   @Test
   void should_valid_vehicle() {
     // given
-    Errors errors = new BeanPropertyBindingResult(vehicleDto, "validUser");
 
     // when + then
     vehicleValidator.validate(vehicleDto, errors);
@@ -42,78 +45,78 @@ class VehicleValidatorTest {
   void should_throw_exception_when_colour_is_null() {
     // given
     vehicleDto.setColour(null);
-    Errors errors = new BeanPropertyBindingResult(vehicleDto, "validUser");
 
-    // when + then
-    assertThrows(IllegalArgumentException.class,
+    // when
+    IllegalArgumentException illegalArgumentException = assertThrows(IllegalArgumentException.class,
         () -> vehicleValidator.validate(vehicleDto, errors));
+
+    // then
+    assertEquals("Vehicle colour is missing", illegalArgumentException.getMessage());
   }
 
   @Test
   void should_throw_exception_when_condition_is_null() {
     // given
     vehicleDto.setCondition(null);
-    Errors errors = new BeanPropertyBindingResult(vehicleDto, "validUser");
 
-    // when + then
-    assertThrows(IllegalArgumentException.class,
+    // when
+    IllegalArgumentException illegalArgumentException = assertThrows(IllegalArgumentException.class,
         () -> vehicleValidator.validate(vehicleDto, errors));
+
+    // then
+    assertEquals("Vehicle condition does not exist", illegalArgumentException.getMessage());
   }
 
   @Test
   void should_throw_exception_when_currency_is_null() {
     // given
     vehicleDto.setCurrency(null);
-    Errors errors = new BeanPropertyBindingResult(vehicleDto, "validUser");
 
-    // when + then
-    assertThrows(IllegalArgumentException.class,
+    // when
+    IllegalArgumentException illegalArgumentException = assertThrows(IllegalArgumentException.class,
         () -> vehicleValidator.validate(vehicleDto, errors));
+
+    // then
+    assertEquals("Vehicle currency is missing", illegalArgumentException.getMessage());
   }
 
   @Test
   void should_throw_exception_when_date_of_production_is_null() {
     // given
     vehicleDto.setDateOfProduction(null);
-    Errors errors = new BeanPropertyBindingResult(vehicleDto, "validUser");
 
-    // when + then
-    assertThrows(IllegalArgumentException.class,
+    // when
+    IllegalArgumentException illegalArgumentException = assertThrows(IllegalArgumentException.class,
         () -> vehicleValidator.validate(vehicleDto, errors));
+
+    // then
+    assertEquals("Production date has incorrect value", illegalArgumentException.getMessage());
   }
 
   @Test
   void should_throw_exception_when_drive_is_null() {
     // given
     vehicleDto.setDrive(null);
-    Errors errors = new BeanPropertyBindingResult(vehicleDto, "validUser");
 
-    // when + then
-    assertThrows(IllegalArgumentException.class,
+    // when
+    IllegalArgumentException illegalArgumentException = assertThrows(IllegalArgumentException.class,
         () -> vehicleValidator.validate(vehicleDto, errors));
+
+    // then
+    assertEquals("Vehicle drive does not exist", illegalArgumentException.getMessage());
   }
 
   @Test
   void should_throw_exception_when_engine_is_null() {
     // given
     vehicleDto.setEngineDto(null);
-    Errors errors = new BeanPropertyBindingResult(vehicleDto, "validUser");
 
-    // when + then
-    assertThrows(IllegalArgumentException.class,
+    // when
+    IllegalArgumentException illegalArgumentException = assertThrows(IllegalArgumentException.class,
         () -> vehicleValidator.validate(vehicleDto, errors));
-  }
 
-  @Test
-  void should_throw_exception_when_engine_capacity_is_null() {
-    // given
-    engineDto.setCapacity(null);
-    vehicleDto.setEngineDto(engineDto);
-    Errors errors = new BeanPropertyBindingResult(vehicleDto, "validUser");
-
-    // when + then
-    assertThrows(IllegalArgumentException.class,
-        () -> vehicleValidator.validate(vehicleDto, errors));
+    // then
+    assertEquals("Missing vehicle engine", illegalArgumentException.getMessage());
   }
 
   @Test
@@ -121,11 +124,13 @@ class VehicleValidatorTest {
     // given
     engineDto.setCapacity(-1.0D);
     vehicleDto.setEngineDto(engineDto);
-    Errors errors = new BeanPropertyBindingResult(vehicleDto, "validUser");
 
-    // when + then
-    assertThrows(IllegalArgumentException.class,
+    // when
+    IllegalArgumentException illegalArgumentException = assertThrows(IllegalArgumentException.class,
         () -> vehicleValidator.validate(vehicleDto, errors));
+
+    // then
+    assertEquals("Engine capacity has incorrect value", illegalArgumentException.getMessage());
   }
 
   @Test
@@ -133,11 +138,13 @@ class VehicleValidatorTest {
     // given
     engineDto.setEmmisionClass(null);
     vehicleDto.setEngineDto(engineDto);
-    Errors errors = new BeanPropertyBindingResult(vehicleDto, "validUser");
 
-    // when + then
-    assertThrows(IllegalArgumentException.class,
+    // when
+    IllegalArgumentException illegalArgumentException = assertThrows(IllegalArgumentException.class,
         () -> vehicleValidator.validate(vehicleDto, errors));
+
+    // then
+    assertEquals("Emission class does not exist", illegalArgumentException.getMessage());
   }
 
   @Test
@@ -145,23 +152,13 @@ class VehicleValidatorTest {
     // given
     engineDto.setFuel(null);
     vehicleDto.setEngineDto(engineDto);
-    Errors errors = new BeanPropertyBindingResult(vehicleDto, "validUser");
 
-    // when + then
-    assertThrows(IllegalArgumentException.class,
+    // when
+    IllegalArgumentException illegalArgumentException = assertThrows(IllegalArgumentException.class,
         () -> vehicleValidator.validate(vehicleDto, errors));
-  }
 
-  @Test
-  void should_throw_exception_when_engine_fuel_consumption_is_null() {
-    // given
-    engineDto.setFuelConsumption(null);
-    vehicleDto.setEngineDto(engineDto);
-    Errors errors = new BeanPropertyBindingResult(vehicleDto, "validUser");
-
-    // when + then
-    assertThrows(IllegalArgumentException.class,
-        () -> vehicleValidator.validate(vehicleDto, errors));
+    // then
+    assertEquals("Fuel type does not exist", illegalArgumentException.getMessage());
   }
 
   @Test
@@ -169,23 +166,14 @@ class VehicleValidatorTest {
     // given
     engineDto.setFuelConsumption(-1.0D);
     vehicleDto.setEngineDto(engineDto);
-    Errors errors = new BeanPropertyBindingResult(vehicleDto, "validUser");
 
-    // when + then
-    assertThrows(IllegalArgumentException.class,
+    // when
+    IllegalArgumentException illegalArgumentException = assertThrows(IllegalArgumentException.class,
         () -> vehicleValidator.validate(vehicleDto, errors));
-  }
 
-  @Test
-  void should_throw_exception_when_engine_power_is_null() {
-    // given
-    engineDto.setPower(null);
-    vehicleDto.setEngineDto(engineDto);
-    Errors errors = new BeanPropertyBindingResult(vehicleDto, "validUser");
-
-    // when + then
-    assertThrows(IllegalArgumentException.class,
-        () -> vehicleValidator.validate(vehicleDto, errors));
+    // then
+    assertEquals("Engine fuel consumption has incorrect value",
+        illegalArgumentException.getMessage());
   }
 
   @Test
@@ -193,296 +181,301 @@ class VehicleValidatorTest {
     // given
     engineDto.setPower(0);
     vehicleDto.setEngineDto(engineDto);
-    Errors errors = new BeanPropertyBindingResult(vehicleDto, "validUser");
 
-    // when + then
-    assertThrows(IllegalArgumentException.class,
+    // when
+    IllegalArgumentException illegalArgumentException = assertThrows(IllegalArgumentException.class,
         () -> vehicleValidator.validate(vehicleDto, errors));
+
+    // then
+    assertEquals("Engine power has incorrect value", illegalArgumentException.getMessage());
   }
 
   @Test
   void should_throw_exception_when_features_are_null() {
     // given
     vehicleDto.setFeatures(null);
-    Errors errors = new BeanPropertyBindingResult(vehicleDto, "validUser");
 
-    // when + then
-    assertThrows(IllegalArgumentException.class,
+    // when
+    IllegalArgumentException illegalArgumentException = assertThrows(IllegalArgumentException.class,
         () -> vehicleValidator.validate(vehicleDto, errors));
+
+    // then
+    assertEquals("Vehicle has no features", illegalArgumentException.getMessage());
   }
 
   @Test
   void should_throw_exception_when_features_are_empty() {
     // given
-    vehicleDto.setFeatures(Set.of());
-    Errors errors = new BeanPropertyBindingResult(vehicleDto, "validUser");
+    vehicleDto.setFeatures(Collections.emptySet());
 
-    // when + then
-    assertThrows(IllegalArgumentException.class,
+    // when
+    IllegalArgumentException illegalArgumentException = assertThrows(IllegalArgumentException.class,
         () -> vehicleValidator.validate(vehicleDto, errors));
+
+    // then
+    assertEquals("Vehicle has no features", illegalArgumentException.getMessage());
   }
 
   @Test
   void should_throw_exception_when_first_registration_is_null() {
     // given
     vehicleDto.setFirstRegistration(null);
-    Errors errors = new BeanPropertyBindingResult(vehicleDto, "validUser");
 
-    // when + then
-    assertThrows(IllegalArgumentException.class,
+    // when
+    IllegalArgumentException illegalArgumentException = assertThrows(IllegalArgumentException.class,
         () -> vehicleValidator.validate(vehicleDto, errors));
+
+    // then
+    assertEquals("First registration date has incorrect value",
+        illegalArgumentException.getMessage());
   }
 
   @Test
   void should_throw_exception_when_first_registration_is_before_date_of_production() {
     // given
     vehicleDto.setFirstRegistration(vehicleDto.getDateOfProduction().minus(1, DAYS));
-    Errors errors = new BeanPropertyBindingResult(vehicleDto, "validUser");
 
-    // when + then
-    assertThrows(IllegalArgumentException.class,
+    // when
+    IllegalArgumentException illegalArgumentException = assertThrows(IllegalArgumentException.class,
         () -> vehicleValidator.validate(vehicleDto, errors));
+
+    // then
+    assertEquals("First registration date has incorrect value",
+        illegalArgumentException.getMessage());
   }
 
   @Test
   void should_throw_exception_when_gearbox_is_null() {
     // given
     vehicleDto.setGearbox(null);
-    Errors errors = new BeanPropertyBindingResult(vehicleDto, "validUser");
 
-    // when + then
-    assertThrows(IllegalArgumentException.class,
+    // when
+    IllegalArgumentException illegalArgumentException = assertThrows(IllegalArgumentException.class,
         () -> vehicleValidator.validate(vehicleDto, errors));
+
+    // then
+    assertEquals("Vehicle gearbox is missing", illegalArgumentException.getMessage());
   }
 
   @Test
   void should_throw_exception_when_generation_is_null() {
     // given
     vehicleDto.setGeneration(null);
-    Errors errors = new BeanPropertyBindingResult(vehicleDto, "validUser");
 
-    // when + then
-    assertThrows(IllegalArgumentException.class,
+    // when
+    IllegalArgumentException illegalArgumentException = assertThrows(IllegalArgumentException.class,
         () -> vehicleValidator.validate(vehicleDto, errors));
+
+    // then
+    assertEquals("Generation is not valid", illegalArgumentException.getMessage());
   }
 
   @Test
-  void should_throw_exception_when_generation_is_empty() {
+  void should_throw_exception_when_generation_is_blank() {
     // given
-    vehicleDto.setGeneration("");
-    Errors errors = new BeanPropertyBindingResult(vehicleDto, "validUser");
+    vehicleDto.setGeneration(BLANK);
 
-    // when + then
-    assertThrows(IllegalArgumentException.class,
+    // when
+    IllegalArgumentException illegalArgumentException = assertThrows(IllegalArgumentException.class,
         () -> vehicleValidator.validate(vehicleDto, errors));
+
+    // then
+    assertEquals("Generation is not valid", illegalArgumentException.getMessage());
   }
 
   @Test
   void should_throw_exception_when_generation_has_incorrect_value() {
     // given
     vehicleDto.setGeneration("Wrong generation");
-    Errors errors = new BeanPropertyBindingResult(vehicleDto, "validUser");
 
-    // when + then
-    assertThrows(IllegalArgumentException.class,
+    // when
+    IllegalArgumentException illegalArgumentException = assertThrows(IllegalArgumentException.class,
         () -> vehicleValidator.validate(vehicleDto, errors));
+
+    // then
+    assertEquals("Given generation does not exist", illegalArgumentException.getMessage());
   }
 
   @Test
   void should_throw_exception_when_location_is_null() {
     // given
     vehicleDto.setLocation(null);
-    Errors errors = new BeanPropertyBindingResult(vehicleDto, "validUser");
 
-    // when + then
-    assertThrows(IllegalArgumentException.class,
+    // when
+    IllegalArgumentException illegalArgumentException = assertThrows(IllegalArgumentException.class,
         () -> vehicleValidator.validate(vehicleDto, errors));
+
+    // then
+    assertEquals("Vehicle location is missing", illegalArgumentException.getMessage());
   }
 
   @Test
-  void should_throw_exception_when_location_is_empty() {
+  void should_throw_exception_when_location_is_blank() {
     // given
-    vehicleDto.setLocation("");
-    Errors errors = new BeanPropertyBindingResult(vehicleDto, "validUser");
+    vehicleDto.setLocation(BLANK);
 
-    // when + then
-    assertThrows(IllegalArgumentException.class,
+    // when
+    IllegalArgumentException illegalArgumentException = assertThrows(IllegalArgumentException.class,
         () -> vehicleValidator.validate(vehicleDto, errors));
+
+    // then
+    assertEquals("Vehicle location is missing", illegalArgumentException.getMessage());
   }
 
   @Test
   void should_throw_exception_when_make_is_null() {
     // given
     vehicleDto.setMake(null);
-    Errors errors = new BeanPropertyBindingResult(vehicleDto, "validUser");
 
-    // when + then
-    assertThrows(IllegalArgumentException.class,
+    // when
+    IllegalArgumentException illegalArgumentException = assertThrows(IllegalArgumentException.class,
         () -> vehicleValidator.validate(vehicleDto, errors));
-  }
 
-  @Test
-  void should_throw_exception_when_mileage_is_null() {
-    // given
-    vehicleDto.setMileage(null);
-    Errors errors = new BeanPropertyBindingResult(vehicleDto, "validUser");
-
-    // when + then
-    assertThrows(IllegalArgumentException.class,
-        () -> vehicleValidator.validate(vehicleDto, errors));
+    // then
+    assertEquals("Vehicle make is missing", illegalArgumentException.getMessage());
   }
 
   @Test
   void should_throw_exception_when_mileage_is_less_than_zero() {
     // given
     vehicleDto.setMileage(-1L);
-    Errors errors = new BeanPropertyBindingResult(vehicleDto, "validUser");
 
-    // when + then
-    assertThrows(IllegalArgumentException.class,
+    // when
+    IllegalArgumentException illegalArgumentException = assertThrows(IllegalArgumentException.class,
         () -> vehicleValidator.validate(vehicleDto, errors));
+
+    // then
+    assertEquals("Mileage has incorrect value", illegalArgumentException.getMessage());
   }
 
   @Test
   void should_throw_exception_when_model_is_null() {
     // given
     vehicleDto.setModel(null);
-    Errors errors = new BeanPropertyBindingResult(vehicleDto, "validUser");
 
-    // when + then
-    assertThrows(IllegalArgumentException.class,
+    // when
+    IllegalArgumentException illegalArgumentException = assertThrows(IllegalArgumentException.class,
         () -> vehicleValidator.validate(vehicleDto, errors));
+
+    // then
+    assertEquals("Vehicle model is missing", illegalArgumentException.getMessage());
   }
 
   @Test
-  void should_throw_exception_when_model_is_empty() {
+  void should_throw_exception_when_model_is_blank() {
     // given
-    vehicleDto.setModel("");
-    Errors errors = new BeanPropertyBindingResult(vehicleDto, "validUser");
+    vehicleDto.setModel(BLANK);
 
-    // when + then
-    assertThrows(IllegalArgumentException.class,
+    // when
+    IllegalArgumentException illegalArgumentException = assertThrows(IllegalArgumentException.class,
         () -> vehicleValidator.validate(vehicleDto, errors));
+
+    // then
+    assertEquals("Vehicle model is missing", illegalArgumentException.getMessage());
   }
 
   @Test
   void should_throw_exception_when_model_has_incorrect_value() {
     // given
     vehicleDto.setModel("Wrong model");
-    Errors errors = new BeanPropertyBindingResult(vehicleDto, "validUser");
 
-    // when + then
-    assertThrows(IllegalArgumentException.class,
+    // when
+    IllegalArgumentException illegalArgumentException = assertThrows(IllegalArgumentException.class,
         () -> vehicleValidator.validate(vehicleDto, errors));
-  }
 
-  @Test
-  void should_throw_exception_when_number_of_seats_is_null() {
-    // given
-    vehicleDto.setNumberOfSeats(null);
-    Errors errors = new BeanPropertyBindingResult(vehicleDto, "validUser");
-
-    // when + then
-    assertThrows(IllegalArgumentException.class,
-        () -> vehicleValidator.validate(vehicleDto, errors));
+    // then
+    assertEquals("Given model does not exist", illegalArgumentException.getMessage());
   }
 
   @Test
   void should_throw_exception_when_number_of_seats_is_less_than_zero() {
     // given
     vehicleDto.setNumberOfSeats(0);
-    Errors errors = new BeanPropertyBindingResult(vehicleDto, "validUser");
 
-    // when + then
-    assertThrows(IllegalArgumentException.class,
+    // when
+    IllegalArgumentException illegalArgumentException = assertThrows(IllegalArgumentException.class,
         () -> vehicleValidator.validate(vehicleDto, errors));
-  }
 
-  @Test
-  void should_throw_exception_when_number_of_vehicle_owners_is_null() {
-    // given
-    vehicleDto.setNumberOfVehicleOwners(null);
-    Errors errors = new BeanPropertyBindingResult(vehicleDto, "validUser");
-
-    // when + then
-    assertThrows(IllegalArgumentException.class,
-        () -> vehicleValidator.validate(vehicleDto, errors));
+    // then
+    assertEquals("Number of seats has incorrect value", illegalArgumentException.getMessage());
   }
 
   @Test
   void should_throw_exception_when_number_of_vehicle_owners_is_less_than_zero() {
     // given
     vehicleDto.setNumberOfVehicleOwners(-1);
-    Errors errors = new BeanPropertyBindingResult(vehicleDto, "validUser");
 
-    // when + then
-    assertThrows(IllegalArgumentException.class,
+    // when
+    IllegalArgumentException illegalArgumentException = assertThrows(IllegalArgumentException.class,
         () -> vehicleValidator.validate(vehicleDto, errors));
+
+    // then
+    assertEquals("Number of vehicle owners has incorrect value",
+        illegalArgumentException.getMessage());
   }
 
   @Test
   void should_throw_exception_when_price_is_null() {
     // given
     vehicleDto.setPrice(null);
-    Errors errors = new BeanPropertyBindingResult(vehicleDto, "validUser");
 
-    // when + then
-    assertThrows(IllegalArgumentException.class,
+    // when
+    IllegalArgumentException illegalArgumentException = assertThrows(IllegalArgumentException.class,
         () -> vehicleValidator.validate(vehicleDto, errors));
+
+    // then
+    assertEquals("Price has incorrect value", illegalArgumentException.getMessage());
   }
 
   @Test
   void should_throw_exception_when_price_is_less_than_zero() {
     // given
     vehicleDto.setPrice(BigDecimal.valueOf(-1L));
-    Errors errors = new BeanPropertyBindingResult(vehicleDto, "validUser");
 
-    // when + then
-    assertThrows(IllegalArgumentException.class,
+    // when
+    IllegalArgumentException illegalArgumentException = assertThrows(IllegalArgumentException.class,
         () -> vehicleValidator.validate(vehicleDto, errors));
+
+    // then
+    assertEquals("Price has incorrect value", illegalArgumentException.getMessage());
   }
 
   @Test
   void should_throw_exception_when_type_is_null() {
     // given
     vehicleDto.setType(null);
-    Errors errors = new BeanPropertyBindingResult(vehicleDto, "validUser");
 
-    // when + then
-    assertThrows(IllegalArgumentException.class,
+    // when
+    IllegalArgumentException illegalArgumentException = assertThrows(IllegalArgumentException.class,
         () -> vehicleValidator.validate(vehicleDto, errors));
+
+    // then
+    assertEquals("Vehicle is missing", illegalArgumentException.getMessage());
   }
 
   @Test
   void should_throw_exception_when_vin_is_null() {
     // given
     vehicleDto.setVin(null);
-    Errors errors = new BeanPropertyBindingResult(vehicleDto, "validUser");
 
-    // when + then
-    assertThrows(IllegalArgumentException.class,
+    // when
+    IllegalArgumentException illegalArgumentException = assertThrows(IllegalArgumentException.class,
         () -> vehicleValidator.validate(vehicleDto, errors));
+
+    // then
+    assertEquals("Vehicle vin is missing", illegalArgumentException.getMessage());
   }
 
   @Test
-  void should_throw_exception_when_vin_is_empty() {
+  void should_throw_exception_when_vin_is_blank() {
     // given
-    vehicleDto.setVin("");
-    Errors errors = new BeanPropertyBindingResult(vehicleDto, "validUser");
+    vehicleDto.setVin(BLANK);
 
-    // when + then
-    assertThrows(IllegalArgumentException.class,
+    // when
+    IllegalArgumentException illegalArgumentException = assertThrows(IllegalArgumentException.class,
         () -> vehicleValidator.validate(vehicleDto, errors));
-  }
 
-  @Test
-  void should_throw_exception_when_vin_has_incorrect_format() {
-    // given
-    //    vehicleDto.setVin("");
-    //    Errors errors = new BeanPropertyBindingResult(vehicleDto, "validUser");
-
-    // when + then
-    //    assertThrows(IllegalArgumentException.class,
-    //        () -> vehicleValidator.validate(vehicleDto, errors));
+    // then
+    assertEquals("Vehicle vin is missing", illegalArgumentException.getMessage());
   }
 }
